Tue Mar  4 11:25:22 CET 2003  Jan Hubicka  <jh@suse.cz>

	* calls.c (rtx_for_function_call): Take the address as an argument
	(expand_call): Do not modify the expression.

2003-03-04  Kevin Buettner  <kevinb@redhat.com>

	* dwarf2out.c (rtl_for_decl_location): Don't return NULL_RTX for
	global register variables.

2003-03-03  Richard Henderson  <rth@redhat.com>

        * configure.in (HAVE_AS_LTOFFX_LDXMOV_RELOCS): New ia64 test.
        * config.in, configure: Rebuild.
        * config/ia64/ia64.c (ia64_ld_address_bypass_p): Accept lo_sum.
        * config/ia64/ia64.md (load_symptr): Use high/lo_sum for the
        paired ldtoffx and ldxmov annotations.
        (load_symptr_internal1): Remove.
        (load_symptr_high, load_symptr_low): New.
        * config/ia64/ia64.h (HAVE_AS_LTOFFX_LDXMOV_RELOCS): Default to 0.

2003-03-03  Jason Merrill  <jason@redhat.com>

	* calls.c (compute_argument_addresses): Give the new MEMs a
	minimum alignment of PARM_BOUNDARY.

2003-03-03  Geoffrey Keating  <geoffk@apple.com>

	* doc/install.texi (Specific): Update entry for powerpc-darwin.

Mon Mar  3 19:09:06 CET 2003  Jan Hubicka  <jh@suse.cz>
	* toplev.c (rest_of_compilation):  Avoid cfg_cleanup calls when not
	optimizing.

Fri Feb 28 12:38:46 CET 2003  Jan Hubicka  <jh@suse.cz>

	* combine.c (gen_lowpart_for_combine): Update handling of subregs_of_mode
	* flow.c (life_analysis, mark_used_regs): Likewise.
	* regclass.c (subregs_of_mode): Turn into single bitmap.
	(cannot_change-mode_set_regs, invalid_mode_change_p): Update
	dealing with subregs_of_mode
	* regs.h (subregs_of_mode): Update prototype.

Fri Feb 28 11:13:57 CET 2003  Jan Hubicka  <jh@suse.cz>

	* toplev.c (rest_of_compilation): Rearrange insn splitting
	* reg-stack.c (reg_to_stack): Do not split insns.

2003-03-02  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* ggc-common.c (ggc_rlimit_bound): Cast RLIM_INFINITY to avoid
	warnings.

2003-03-02  Stephane Carrez  <stcarrez@nerim.fr>
